alternativen zu pandas ergänzt

--- a/content/11-tidy.ipynb
+++ b/content/11-tidy.ipynb
@@ -5,7 +5,9 @@
    "id": "ddfa3f4a-9fc8-46a4-9fd3-5b1a32053af5",
    "metadata": {},
    "source": [
-    "# Tidy Data with Pandas"
+    "# Tidy Data with Pandas\n",
+    "\n",
+    "[Lecture](https://librarycarpentry.github.io/lc-python-intro/tidy.html)"
    ]
   },
   {
